--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "seed": "node utils/seed"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.13"
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
